Se modifico la documentación de swagger
